syntax = 'proto3';

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string role = 5;
    string phNo = 6;
    string dob = 7;
    string gender = 8;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    string message = 1;
    User user = 2;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
}
